@@ -27,7 +27,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <ApplicationManifest>app_x86.manifest</ApplicationManifest>
     <PublishUrl>publish\</PublishUrl>
@@ -44,6 +44,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -100,9 +101,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="LinqBridge, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c2b14eb747628076, processorArchitecture=MSIL">
-      <HintPath>lib\LinqBridge.dll</HintPath>
-    </Reference>
     <Reference Include="MediaInfoWrapper, Version=0.7.4.4, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\MediaInfoWrapper.dll</HintPath>
@@ -143,6 +141,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="core\details\mux\baseMuxWindow.resx">
       <DependentUpon>baseMuxWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="core\details\mux\MuxStreamControl.resx">
       <SubType>Designer</SubType>
@@ -534,7 +533,6 @@
     <Compile Include="core\util\PrettyFormatting.cs" />
     <Compile Include="core\util\Resolution.cs" />
     <Compile Include="core\util\Shutdown.cs" />
-    <Compile Include="core\util\Tuples.cs" />
     <Compile Include="core\util\Util.cs" />
     <Compile Include="core\util\VideoUtil.cs" />
     <Compile Include="core\util\VistaStuff.cs" />
